파일전송 로직 수정

--- a/SampleWeb/index.html
+++ b/SampleWeb/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PrintSolution</title>
     <link rel="stylesheet" href="./asset/index.css">
+    <script src="./asset/jquery-3.6.4.min.js"></script>
     <script src="./asset/index.js"></script>
 </head>
 <body>
@@ -30,7 +31,7 @@
                 <input type="file" id="fileSelect" class="item" accept=".pdf, .PDF"/>
             </div>
             <div>
-                <button>출력</button>
+                <button id="submitButton">출력</button>
                 <span id="useYn"></span>
             </div>
         </div>
