--- a/SampleWeb/index.html
+++ b/SampleWeb/index.html
@@ -10,31 +10,33 @@
     <script src="./asset/index.js"></script>
 </head>
 <body>
-    <header>
-        <h1>PrintSolution Page</h1>
-    </header>
-    <main>
-        <div>
-            <span id="alertMessage"></span>
-        </div>
-        <div>
-            <div class="menu-div">
-                <span class="menu">프린터 선택</span>
-                <select id="printerList" class="item"></select>
-            </div>
-            <div class="menu-div">
-                <span class="menu">프린터 상태</span>
-                <span id="printerStatus" class="item"></span>
-            </div>
-            <div class="menu-div">
-                <span class="menu">파일 선택</span>
-                <input type="file" id="fileSelect" class="item" accept=".pdf, .PDF"/>
+    <div class="container-box">
+        <header>
+            <h1>PrintSolution <small>Sample Page</small></h1>
+        </header>
+        <main>
+            <div>
+                <span id="alertMessage"></span>
             </div>
             <div>
-                <button id="submitButton">출력</button>
-                <span id="useYn"></span>
+                <div class="menu-div">
+                    <span class="menu">프린터 선택</span>
+                    <select id="printerList" class="item"></select>
+                    <span id="useYn"></span>
+                </div>
+                <div class="menu-div">
+                    <span class="menu">프린터 상태</span>
+                    <span id="printerStatus" class="item"></span>
+                </div>
+                <div class="menu-div">
+                    <span class="menu">파일 선택</span>
+                    <input type="file" id="fileSelect" class="item" accept=".pdf, .PDF"/>
+                </div>
             </div>
-        </div>
-    </main>
+            <div class="footer-area">
+                <button id="submitButton">출력</button>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
